--- a/sass/elements/_schedule.scss
+++ b/sass/elements/_schedule.scss
@@ -8,6 +8,8 @@ $shadow: rgba(0, 0, 0, 0.5);
   color: $black;
   text-decoration: none !important; // scss-lint:disable ImportantRule
   opacity: 0.5;
+  position: absolute;
+  right: 10px;
 
   &:hover {
     opacity: 1;
