The great appeasement Also fix jump to current show when nothing's on air

--- a/views/elements/current_and_next.tmpl
+++ b/views/elements/current_and_next.tmpl
@@ -1,5 +1,5 @@
 {{define "current_and_next"}}
-<script src='{{url "js/currentAndNext.js"}}'></script>
+<script src='{{url "/js/currentAndNext.js"}}'></script>
 {{with .CurrentAndNext}}
 <div class="current-and-next row justify-content-center">
   {{if .Current}}
