--- a/views/schedule_week.tmpl
+++ b/views/schedule_week.tmpl
@@ -29,7 +29,7 @@
         <div class="row">
           {{with $weekName := week (index .Schedule.Dates 0)}}
             {{if eq $weekName "this week"}}
-              <button class="btn btn-secondary mobile-only inline" type="button" onclick="jumpToNow()">Jump to the current show</button>
+              <button class="btn btn-secondary mobile-only inline" id="jumpToNow" type="button" onclick="jumpToNow()">Jump to the current show</button>
             {{end}}
           {{end}}
           <h1 class="mobile-only inline"><a class="fa fa-key schedule-key-icon" data-toggle="collapse" data-target=".schedule-keys" aria-expanded="false" aria-controls="schedule-keys"></a></h1>
