Fix Mail to icon

--- a/views/team.tmpl
+++ b/views/team.tmpl
@@ -36,7 +36,7 @@
       <div class="container container-padded">
         <h2>Team Description</h2>
         <p>{{html .Description}}</p>
-        <h5><i class="fa fa-envelope-o"></i> <a href="mailto:{{.Alias}}@ury.org.uk" alt="Contact {{.Name}}">{{.Alias}}@ury.org.uk</a></h5>
+        <h5><i class="far fa-envelope"></i> <a href="mailto:{{.Alias}}@ury.org.uk" alt="Contact {{.Name}}">{{.Alias}}@ury.org.uk</a></h5>
       </div>
     </div>
     {{end}}
