--- a/views/people.tmpl
+++ b/views/people.tmpl
@@ -79,12 +79,11 @@
             <ul class="split-evenly-2">
             {{range .Officerships}}
               <li>
-              {{.OfficerName}} - from {{.FromDate.Format "2006-01-02"}} to
-              {{if .TillDateRaw}}
-                {{.TillDate.Format "2006-01-02"}}
-              {{else}}
-                current
-              {{end}}
+              {{- .OfficerName}} - {{if .TillDateRaw -}}
+                from {{.FromDate.Format "2006-01-02"}} to {{.TillDate.Format "2006-01-02"}}
+              {{- else -}}
+                since {{.FromDate.Format "2006-01-02"}}
+              {{- end -}}
               </li>
             {{end}}
             </ul>
