--- a/views/elements/current_and_next.tmpl
+++ b/views/elements/current_and_next.tmpl
@@ -14,9 +14,9 @@
   </div>
   <div class="col-7 col-sm-9 col-md-5 p-0 m-0">
     {{if .Current.Url}}
-    <a class="current-and-next-now p-2 px-3 p-md-3 p-lg-4 " href="{{.Current.Url}}" title="View the show now playing">
+    <a class="current-and-next-now p-2 px-3 p-sm-3 p-lg-4 " href="{{.Current.Url}}" title="View the show now playing">
     {{else}}
-    <div class="current-and-next-now p-2 px-3 p-md-3 p-lg-4">
+    <div class="current-and-next-now p-2 px-3 p-sm-3 p-lg-4">
     {{end}}
     <h2>Now</h2>
     {{template "current_next" .Current}}
