--- a/views/podcast.tmpl
+++ b/views/podcast.tmpl
@@ -59,7 +59,7 @@
                   {{end}}
                   data-description="Checkout {{.PageData.Podcast.Title}} on {{.PageContext.LongName}}"
                   data-via="{{.PageContext.MainTwitter}}"
-                  class="prettySocial fa fa-twitter">
+                  class="prettySocial fab fa-twitter">
               </a>
 
               <a href="#"
@@ -70,7 +70,7 @@
                   {{if .PageData.Podcast.Photo}}
                       data-media="{{.PageContext.FullURL}}{{.PageData.Podcast.Photo}}"
                   {{end}}
-                  class="prettySocial fa fa-facebook">
+                  class="prettySocial fab fa-facebook">
               </a>
 
               <a href="#"
@@ -80,7 +80,7 @@
                   {{if .PageData.Podcast.Photo}}
                       data-media="{{.PageContext.FullURL}}{{.PageData.Podcast.Photo}}"
                   {{end}}
-                  class="prettySocial fa fa-google">
+                  class="prettySocial fab fa-google">
               </a>
             </div>
           </div>
@@ -94,8 +94,7 @@
       <div class="row">
         <div class="col-12 col-lg-6">
           <p>Want to put our podcast on your blog or website? Just copy the HTML code below...</p>
-          <textarea class="uryplayer-podcast-code" readonly="readonly" onclick="this.focus(); this.select();" style="border: none;" type="text" cols="30">
-            <iframe width=&quot;500&quot; height=&quot;500&quot; src=&quot;https://ury.org.uk/podcasts/{{.PageData.Podcast.PodcastID}}/player/&quot; frameborder=&quot;0&quot; allowfullscreen > </iframe>
+          <textarea class="uryplayer-podcast-code" readonly="readonly" onclick="this.focus(); this.select();" style="border: none;" type="text" cols="30"><iframe width=&quot;500&quot; height=&quot;500&quot; src=&quot;https://ury.org.uk/podcasts/{{.PageData.Podcast.PodcastID}}/player/&quot; frameborder=&quot;0&quot; allowfullscreen > </iframe>
           </textarea>
         </div>
       </div>
