Make teams number dynamic.

--- a/views/teams.tmpl
+++ b/views/teams.tmpl
@@ -17,7 +17,7 @@
     <div class="container container-padded">
       <h4>Get Involved</h4>
       <p>
-       URY has 11 teams of students which look after all aspects of running a radio station. Whether that be creating the content or maintaining the station.</p>
+       URY has {{len .Teams}} teams of students which look after all aspects of running a radio station. Whether that be creating the content or maintaining the station.</p>
       <p>
       Fancy having your own show or joining a team? Start your journey by joining URY and become a paid member.
       </p>
