--- a/views/about.tmpl
+++ b/views/about.tmpl
@@ -94,7 +94,7 @@
   <div class="container container-padded">
     <h1>Our History</h1>
     <div> {{/* Prevents bug where p would appear inline with h2 */}}
-      <p>URY has a rich history of pioneering broadcasting, beginning in 1968 when URY became the first legal independent radio station in the UK, with a joint broadcast featuring special guest John Peel and BBC York.</p>
+      <p>URY has a rich history of pioneering broadcasting, beginning in 1968 when URY became the first legal independent radio station in the UK.</p>
       <p>Over the years, we have been fortunate enough to receive numerous awards, including BBC Radio 1 Student Station of the Year in 2005, and many awards from the Student Radio Association.</p>
       <p>At URY we cover a large range of campus events including Student Union Elections, but we also host our own charity events, such as the 40-hour broadcast in aid of Macmillan Cancer Support back in March 2013, where we raised over £1,800. In June 2016, we went a step further and hosted URY’s longest ever show “URY 101”, live from Greg’s Place for 101 hours, all in aid of Yorkshire Cancer Research raising a massive £1,700.</p>
       <p>We pride ourselves at URY for running all the technical aspects of the radio station ourselves. In summer 2015, the internal audio routing was completely overhauled and converted to audio over IP by the engineering team in a project known as “Beat the Buzz”.</p>
