--- a/sass/base/_variables.scss
+++ b/sass/base/_variables.scss
@@ -15,8 +15,8 @@ $flagship: #feb93a;
 
 $disabled-color: rgb(150, 150, 150);
 $primary-color: $ury-blue-color;
-$secondary-color: tint($ury-blue-color, 80%);
-$third-color: tint($ury-blue-color, 60%);
+$secondary-color: #002040;
+$third-color: #001933;
 $off-white-color: #e1e1e1;
 
 $white: #ffffff;
@@ -24,7 +24,8 @@ $blue: #0073e6;
 $red: #d0011b;
 $black: #000000;
 
-$link-blue: #6Af;
+$link-color-light: #4cbcff;
+$link-color-dark: #0069d1;
 
 //font
 $base-font-size: 16px;
