improve consistency of theme use

--- a/views/getinvolved.tmpl
+++ b/views/getinvolved.tmpl
@@ -55,7 +55,7 @@
     </div>
     </div>
 </div>
-<div class="container-fluid container-padded  bg-third">
+<div class="container-fluid container-padded  bg-secondary">
   <div class="container container-padded">
       <h2>How Do I Join?</h2><br>
       <div> {{/* Prevents bug where p would appear inline with h2 */}}
@@ -72,7 +72,7 @@
       </div>
   </div>
 </div>
-<div class="container-fluid container-padded bg-secondary" id="signUp">
+<div class="container-fluid container-padded bg-third" id="signUp">
   <div class="container container-padded">
     <h1>Sign up today!</h1>
     <hr>
