--- a/views/people.tmpl
+++ b/views/people.tmpl
@@ -65,7 +65,7 @@
         </div>
       </div>
     </div> <!-- /outer containter -->
-    <div class="container-fluid bg-secondary">
+    <div class="container-fluid bg-primary">
       <div class="container container-padded">
         <div>
           {{if .User.Bio}}
