--- a/views/about.tmpl
+++ b/views/about.tmpl
@@ -52,7 +52,7 @@
     </div>
   </div>
 </div>
-<div class="container-fluid container-padded bg-third">
+<div class="container-fluid container-padded bg-primary">
   <div class="container container-padded">
     <h1>How To Listen?</h1>
     <p>There are many ways you can listen to URY, whether you’re a Uni of York student, friends and family of our presenters, or you’re just interested in what our student radio has to offer.</p>
@@ -101,7 +101,7 @@
     </div>
   </div>
 </div>
-<div class="container-fluid container-padded bg-primary">
+<div class="container-fluid container-padded bg-secondary">
   <div class="container container-padded">
     <div class="row">
       <div class="col-12">
