--- a/views/index.tmpl
+++ b/views/index.tmpl
@@ -37,13 +37,13 @@
       </div>
     </div>
   </div>
-  <div id="index-videos" class="container-fluid container-padded pb-0 bg-secondary">
+  <div id="index-videos" class="container-fluid container-padded pb-0 bg-primary">
     <h2>URY Sessions</h2>
     <div id="youtube-videos" class="row scroll-horiz pb-3 custom-scrollbar youtube-video-slider">
     </div>
   </div>
   {{if .Podcasts}}
-  <div id="index-podcasts" class="container-fluid container-padded pb-0 bg-third">
+  <div id="index-podcasts" class="container-fluid container-padded pb-0 bg-secondary">
     <div class="row">
       <div class="col-12">
         <h2>Latest Podcasts</h2>
