--- a/views/team.tmpl
+++ b/views/team.tmpl
@@ -32,7 +32,7 @@
       </div>
     </div>
     {{if .Description}}
-    <div class="container-fluid bg-secondary">
+    <div class="container-fluid bg-primary">
       <div class="container container-padded">
         <h2>Team Description</h2>
         <p>{{html .Description}}</p>
@@ -41,7 +41,7 @@
     </div>
     {{end}}
     {{end}}
-    <div class="container-fluid bg-third">
+    <div class="container-fluid bg-secondary">
       <div class="container container-padded">
         <h2>Team Officers</h2>
         <div class="row">
@@ -57,7 +57,7 @@
         </div>
       </div>
     </div>
-    <div class="container-fluid bg-secondary">
+    <div class="container-fluid bg-third">
       <div class="container container-padded">
         <h2>Get Involved</h2>
         <p>
