Further improve consistancy

--- a/views/show.tmpl
+++ b/views/show.tmpl
@@ -91,7 +91,7 @@
 </div>
 {{with .PageData}}
 {{if .CreditsToUsers}}
-<div class="container-fluid bg-secondary">
+<div class="container-fluid bg-primary">
   <div class="container pt-3">
     <h2>Credits</h2>
     <hr>
@@ -112,7 +112,7 @@
   </div>
 </div>
 {{end}}
-<div class="container-fluid bg-third">
+<div class="container-fluid bg-secondary">
   <div class="container show-selector">
     <div class="row">
 {{end}}
