--- a/views/teams.tmpl
+++ b/views/teams.tmpl
@@ -23,7 +23,7 @@
       </p>
     </div>
   </div>
-  <div class="container-fluid bg-third">
+  <div class="container-fluid bg-primary">
     <div class="container container-padded">
       <div class="row">
         {{range .Teams}}
