--- a/views/timeslot.tmpl
+++ b/views/timeslot.tmpl
@@ -112,7 +112,7 @@
 </div>
 {{with .PageData}}
 {{if .CreditsToUsers}}
-<div class="container-fluid bg-secondary">
+<div class="container-fluid bg-primary">
   <div class="container pt-3">
     <h2>Credits</h2>
     <hr>
@@ -133,7 +133,7 @@
   </div>
 </div>
 {{end}}
-<div class="container-fluid bg-third">
+<div class="container-fluid bg-secondary">
   <div class="container p-3">
     <h2>Tracklist</h2>
     {{if .Tracklist}}
