update to awards - natalieharris2904
Additional awards found- could not find the individual of the best female on ury

--- a/views/about.tmpl
+++ b/views/about.tmpl
@@ -170,6 +170,12 @@
         </ul>
       </div>
       <div class="col-md-6 col-lg-6">
+        <h2>2010</h2>
+        <ul>
+          <li> Silver Best Journalistic Programming (York 90)</li>
+          <li> Silver Best Female Presenter (Rachael Cole)</li>
+        </ul>
+      </div>
         <h2>2009</h2>
         <ul>
           <li>Gold Best Interview (Hilary Benn on Binyam Mohamed)</li>
