--- a/views/about.tmpl
+++ b/views/about.tmpl
@@ -182,6 +182,7 @@
           <li> Silver Best Female Presenter (Rachael Cole)</li>
         </ul>
       </div>
+       <div class="col-md-6 col-lg-6">
         <h2>2009</h2>
         <ul>
           <li>Gold Best Interview (Hilary Benn on Binyam Mohamed)</li>
