--- a/views/about.tmpl
+++ b/views/about.tmpl
@@ -114,10 +114,13 @@
       <div class="col-md-6 col-lg-6">
        <h2>2018</h2>
         <ul>
-          <li>Gold Multiplatform Initiative(URYspy)</li>
-          <li>Gold Best Technical Achievement (URYspy)</li>
-           <li>Silver Kevin Greening Award (URYspy)</li>
-          <li>Sliver Best Male (<a href="{{url "/people/9979/"}}">Joel Mitchell</a>)</li>
+         <li>Gold Multiplatform Initiative(URYspy)</li>
+         <li>Gold Best Technical Achievement (URYspy)</li>
+         <li>Silver Kevin Greening Award (URYspy)</li>
+         <li>Sliver Best Male (<a href="{{url "/people/9979/"}}">Joel Mitchell</a>)</li>
+           </ul>
+      </div>
+        <div class="col-md-6 col-lg-6">
         <h2>2017</h2>
         <ul>
           <li>Gold Best Entertainment Programme (<a href="{{url "/schedule/shows/13053/"}}">URY:PM - with K-Spence</a>)</li>
