Snow place like home

--- a/views/index.tmpl
+++ b/views/index.tmpl
@@ -1,6 +1,7 @@
 {{define "content"}}
 {{with .PageData}}
-  <div class="container-fluid header-large current-next">
+  <div class="container-fluid header-large current-next position-relative">
+    <div class="snow"></div>
     <div class="container">
       <div class="row justify-content-center">
         <div class="col-11 col-md-10 box-shadow-1">
