--- a/sass/elements/_snow.scss
+++ b/sass/elements/_snow.scss
@@ -14,8 +14,8 @@
   left: 0;
   
   background: url('../images/snow.png');
-  background-repeat: no-repeat;
-  background-size: auto 200%;
+  background-repeat: repeat-x;
+  background-size: 100% 200%;
   animation-name: SNOW;
   animation-duration: 3.7s;
   animation-timing-function: linear;
