--- a/sass/elements/_snow.scss
+++ b/sass/elements/_snow.scss
@@ -15,9 +15,9 @@
   
   background: url('../images/snow.png');
   background-repeat: repeat-x;
-  background-size: 100% 200%;
+  background-size: auto 200%;
   animation-name: SNOW;
-  animation-duration: 3.7s;
+  animation-duration: 4.9s;
   animation-timing-function: linear;
   animation-iteration-count: infinite;
 }
