Make snow configurable

--- a/views/index.tmpl
+++ b/views/index.tmpl
@@ -1,7 +1,9 @@
 {{define "content"}}
-{{with .PageData}}
   <div class="container-fluid header-large current-next position-relative">
+  {{if .PageContext.Christmas}}
     <div class="snow"></div>
+  {{end}}
+  {{with .PageData}}
     <div class="container">
       <div class="row justify-content-center">
         <div class="col-11 col-md-10 box-shadow-1">
