--- a/sass/elements/_schedule.scss
+++ b/sass/elements/_schedule.scss
@@ -69,6 +69,11 @@ $shadow: rgba(0, 0, 0, 0.5);
       border: 0;
     }
   }
+  
+  tbody {
+    display: table;
+    width: 100%;
+  }
 
   tr {
     height: 84px;
@@ -197,6 +202,10 @@ $sustainer-color: tint($primary-color, 40%);
     padding: 10px;
     border-radius: 2px;
 
+    tbody {
+      display: table-row-group;
+    }
+    
     .day-header,
     .time-header {
       display: table-cell;
