Change not available wording again.

--- a/views/timeslot.tmpl
+++ b/views/timeslot.tmpl
@@ -45,8 +45,8 @@
           <iframe width="100%" height="120" src="//www.mixcloud.com/widget/iframe/?feed={{.PageData.Timeslot.MixcloudStatus}}&hide_cover=1&light=1" frameborder="0"></iframe>
           <a href="/ontap/" title="Goto {{.PageContext.ShortName}} {{.PageContext.ODName}}">Listen to more shows on demand...</a>
         {{else}}
-          <h3>Sorry, this show isn't available for catchup.</h3>
-          <p class="h5">No recording for this episode is available, this may be at the presenter's request.</p>
+          <h3>This show isn't available for catchup.</h3>
+          <p class="h5">No recording for this episode is available, sorry about that.</p>
         {{end}}
       </div>
     </div>
