--- a/views/about.tmpl
+++ b/views/about.tmpl
@@ -114,9 +114,9 @@
       <div class="col-md-6 col-lg-6">
         <h2>2018</h2>
         <ul>
-          <li>Gold Multiplatform Initiative (URYspy)</li>
-          <li>Gold Best Technical Achievement (URYspy)</li>
-          <li>Silver Kevin Greening Award (URYspy)</li>
+          <li>Gold Multiplatform Initiative (URSpy)</li>
+          <li>Gold Best Technical Achievement (URSpy)</li>
+          <li>Sliver Kevin Greening Award (URSpy)</li>
           <li>Sliver Best Male (<a href="{{url "/people/9979/"}}">Joel Mitchell</a>)</li>
         </ul>
       </div>
