--- a/sass/elements/_currentAndNext.scss
+++ b/sass/elements/_currentAndNext.scss
@@ -16,6 +16,7 @@
 
 .current-and-next {
   color: white;
+  overflow: hidden;
 
   .current-and-next-img {
     background: $current-next-now-bg;
@@ -63,7 +64,7 @@
   .listen-btn {
     max-width: 120px;
     border-radius: .4em .4em 0 0;
-    box-shadow: 0px -2px 1px 1px rgba(0,0,0, 0.33);
+    box-shadow: 0px 1px 1px 1px rgba(0,0,0, 0.33);
     position: absolute;
     bottom: 0;
     right: 0;
