correct spelling mistakes
closes #176

--- a/views/about.tmpl
+++ b/views/about.tmpl
@@ -116,8 +116,8 @@
         <ul>
           <li>Gold Multiplatform Initiative (URSpy)</li>
           <li>Gold Best Technical Achievement (URSpy)</li>
-          <li>Sliver Kevin Greening Award (URSpy)</li>
-          <li>Sliver Best Male (<a href="{{url "/people/9979/"}}">Joel Mitchell</a>)</li>
+          <li>Silver Kevin Greening Award (URSpy)</li>
+          <li>Silver Best Male (<a href="{{url "/people/9979/"}}">Joel Mitchell</a>)</li>
         </ul>
       </div>
       <div class="col-md-6 col-lg-6">
