Added styling and extra config

--- a/sass/base/_variables.scss
+++ b/sass/base/_variables.scss
@@ -13,6 +13,10 @@ $music-purple: #562179;
 
 $flagship: #feb93a;
 
+$cin-primary: #00A69C;
+$cin-dark-primary: #1C857C;
+$cin-background: #333333;
+
 $disabled-color: rgb(150, 150, 150);
 $primary-color: $ury-blue-color;
 $secondary-color: #002040;
