--- a/views/index.tmpl
+++ b/views/index.tmpl
@@ -40,11 +40,15 @@
       </div>
     </div>
   </div>
-  <div id="index-videos" class="container-fluid container-padded pb-0 bg-primary">
-    <h2>URY Candidate Interview Night</h2>
+  {{end}}
+  {{if .PageContext.CIN}}
+  <div id="index-videos" class="container-fluid container-padded pb-0 bg-cin">
+    <h2 class="cin-text">URY Candidate Interview Night</h2>
     <div id="cin-videos" class="row scroll-horiz pb-3 custom-scrollbar youtube-video-slider">
     </div>
   </div>
+  {{end}}
+  {{with .PageData}}
   <div id="index-videos" class="container-fluid container-padded pb-0 bg-primary">
     <h2>URY Sessions</h2>
     <div id="youtube-videos" class="row scroll-horiz pb-3 custom-scrollbar youtube-video-slider">
