--- a/views/index.tmpl
+++ b/views/index.tmpl
@@ -91,7 +91,7 @@
 <script>
 var youtubeAPIKey = {{.PageContext.Youtube.APIKey}};
 var youtubePlaylistID = "{{.PageContext.Youtube.PlaylistID}}";
-var youtubeCINPlaylistID = "{{.PageContext.Youtube.CINPlaylistID}}"
+var youtubeCINPlaylistID = "{{.PageContext.Youtube.CINPlaylistID}}";
 </script>
 <script src='{{url "js/index.js"}}'></script>
 <script src="https://apis.google.com/js/client.js?onload=onGoogleLoad"></script>
