Added CIN themed background

--- a/views/cin.tmpl
+++ b/views/cin.tmpl
@@ -1,7 +1,7 @@
 {{define "title"}}{{.PageContext.ShortName}} | CIN{{end}}
 
 {{define "content"}}
-<div class="container-fluid on-demand">
+<div class="container-fluid bg-cin-gif">
     <div class="container container-padded">
       <div class="row align-items-center text-center">
         <div class="col">
