--- a/sass/base/_backgrounds.scss
+++ b/sass/base/_backgrounds.scss
@@ -52,3 +52,10 @@
 .bg-cin {
   background: $cin-background;
 }
+
+.bg-cin-gif {
+  background: url("/images/holdingcard.gif") center center no-repeat;
+  background-size: cover;
+  color: $white;
+  padding: 6em 0;
+}
