Added see more button, config value and minor changes

--- a/sass/base/_uryCard.scss
+++ b/sass/base/_uryCard.scss
@@ -54,6 +54,11 @@ a.ury-card,
     }
   }
 
+  &.cin {
+    color: $cin-background;
+    background: $cin-primary;
+  }
+
   &.link {
     height: 100%;
     display: flex;
