--- a/views/cin.tmpl
+++ b/views/cin.tmpl
@@ -9,6 +9,9 @@
         </div>
       </div>
     </div>
+    {{if .PageContext.CINLivestreaming}}
+    
+    {{end}}
 </div>
 <div id="index-videos" class="container-fluid container-padded bg-cin">
     <div id="cin-videos" class="row pb-3 youtube-grid">
