cleaned up js for youtube playlists and minor changes

--- a/sass/base/_uryCard.scss
+++ b/sass/base/_uryCard.scss
@@ -54,6 +54,10 @@ a.ury-card,
     }
   }
 
+  &.sessions {
+    background: $music-purple;
+  }
+
   &.cin {
     color: $cin-background;
     background: $cin-primary;
