--- a/views/index.tmpl
+++ b/views/index.tmpl
@@ -51,7 +51,7 @@
   {{with .PageData}}
   <div id="index-videos" class="container-fluid container-padded pb-0 bg-primary">
     <h2>URY Sessions</h2>
-    <div id="youtube-videos" class="row scroll-horiz pb-3 custom-scrollbar youtube-video-slider">
+    <div id="sessions-videos" class="row scroll-horiz pb-3 custom-scrollbar youtube-video-slider">
     </div>
   </div>
   {{if .Podcasts}}
@@ -90,9 +90,11 @@
 <!-- Youtube slider script -->
 <script>
 var youtubeAPIKey = {{.PageContext.Youtube.APIKey}};
-var youtubePlaylistID = "{{.PageContext.Youtube.PlaylistID}}";
+var youtubeSessionsPlaylistID = "{{.PageContext.Youtube.SessionsPlaylistID}}";
 var youtubeCINPlaylistID = "{{.PageContext.Youtube.CINPlaylistID}}";
 var isIndex = true;
+var isCIN = false;
+var isOD = false;
 </script>
 <script src='{{url "js/index.js"}}'></script>
 <script src="https://apis.google.com/js/client.js?onload=onGoogleLoad"></script>
