--- a/views/on_demand.tmpl
+++ b/views/on_demand.tmpl
@@ -43,6 +43,13 @@
       </a>
     </div>
     {{end}}
+    <div class="col-8 col-sm-7 col-md-4 col-lg-3 col-xl-2 pb-3">
+      <a class="ury-card link" href="//mixcloud.com/ury1350/">
+        <div class="ury-card-body">
+          <div class="ury-card-lg-title">See more on Mixcloud...</div>
+        </div>
+      </a>
+    </div>
   </div>
 </div>
 <div id="index-videos" class="container-fluid container-padded bg-secondary">
