--- a/sass/base/_backgrounds.scss
+++ b/sass/base/_backgrounds.scss
@@ -56,6 +56,6 @@
 .bg-cin-gif {
   background: url("/images/holdingcard.gif") center center no-repeat;
   background-size: cover;
-  color: $white;
+  color: $cin-primary;
   padding: 6em 0;
 }
