--- a/views/elements/current_and_next.tmpl
+++ b/views/elements/current_and_next.tmpl
@@ -9,11 +9,11 @@
     {{else}}
       {{url "/images/show-current.png"}}
     {{end}}
-    " alt="{{.Current.Title}} Photo" />
+    " alt="{{.Current.Title}} Logo" />
   </div>
   <div class="col-7 col-sm-9 col-md-5 p-0 m-0">
     {{if .Current.Url}}
-    <a class="current-and-next-now p-2 px-3 p-sm-3 p-lg-4 " href="{{.Current.Url}}" title="On air now: {{.Current.Title}}">
+    <a class="current-and-next-now p-2 px-3 p-sm-3 p-lg-4 " href="{{.Current.Url}}" title="Show currently on air: {{.Current.Title}}">
     {{else}}
     <div class="current-and-next-now p-2 px-3 p-sm-3 p-lg-4">
     {{end}}
@@ -30,7 +30,7 @@
   {{if .Next}}
   <div class="col col-md-5 p-0 m-0">
     {{if .Next.Url}}
-    <a class="current-and-next-next p-3 p-lg-4" href="{{.Next.Url}}" title="On air next: {{.Next.Title}}">
+    <a class="current-and-next-next p-3 p-lg-4" href="{{.Next.Url}}" title="Show on air next: {{.Next.Title}}">
     {{else}}
     <div class="current-and-next-next p-3 p-lg-4">
     {{end}}
@@ -44,7 +44,7 @@
   </div>
   {{end}}
   <div class="col-12 mobile-only p-0">
-    <a href="https://ury.org.uk/listen" class="btn btn-lg btn-block btn-square btn-red listen-btn-mobile" title="Listen Live" onclick="window.open('http://ury.org.uk/live', 'radioplayer', 'height=665,width=380'); return false;"><i class="fa fa-volume-up mr-2"></i>Listen Live</a>
+    <a aria-hidden="true" href="https://ury.org.uk/listen" class="btn btn-lg btn-block btn-square btn-red listen-btn-mobile" title="Listen Live" onclick="window.open('http://ury.org.uk/live', 'radioplayer', 'height=665,width=380'); return false;"><i class="fa fa-volume-up mr-2"></i>Listen Live</a>
   </div>
 </div>
 {{end}}
@@ -52,10 +52,10 @@
 
 {{define "current_next"}}
 {{if .Title}}
-<h5 class="ellipsis">
+<h3 class="h5 ellipsis">
   {{.Title}}
-</h5>
-<h6>
+</h3>
+<h4 class="h6">
   {{if not .EndTime.IsZero}}
     {{- if .StartTime.IsZero -}}
       Now
@@ -64,7 +64,7 @@
     {{- end}} -
     {{.EndTime.Format "15:04"}}
   {{end}}
-</h6>
+</h4>
 {{else}}
 <span>Looks like there is nothing coming up next yet.</span>
 {{end}}
