improve team cards

--- a/sass/base/_uryCard.scss
+++ b/sass/base/_uryCard.scss
@@ -73,3 +73,39 @@ a.ury-card,
 }
 
 
+.team-card {
+  a.card-body  {
+      color: #343a40;
+    &:hover {
+      color: #0c7cbf;
+    }
+  }
+
+  .card-body {
+    height: 12em;
+    text-decoration: none;
+  }
+
+  .card-title {
+    font-weight: bold;
+  }
+
+  .card-text {
+    position: relative;
+    height: 6em; // exactly 4 lines
+    overflow: hidden;
+    color: #343a40;
+
+    &::after {
+      content: "";
+      text-align: right;
+      position: absolute;
+      bottom: 0;
+      right: 0;
+      width: 70%;
+      height: 1.5em;
+      background: linear-gradient(to right, rgba(255, 255, 255, 0), rgba(255, 255, 255, 1) 50%); // scss-lint:disable ColorVariable
+    }
+  }
+}
+
