Add additional page width size

--- a/sass/elements/_currentAndNext.scss
+++ b/sass/elements/_currentAndNext.scss
@@ -13,6 +13,9 @@
     padding: calc(8em + 60px) 0 8em;
   }
 }
+.current-next-container {
+  max-width: 950px;
+}
 
 .current-and-next {
   color: white;
