--- a/views/index.tmpl
+++ b/views/index.tmpl
@@ -6,7 +6,7 @@
   {{with .PageData}}
     <div class="container">
       <div class="row justify-content-center">
-        <div class="col-11 col-md-10 box-shadow-1">
+        <div class="col-11 col-md-10 box-shadow-1 current-next-container">
         {{template "current_and_next" .}}
         {{template "banner" .}}
         </div>
