--- a/views/schedule_week.tmpl
+++ b/views/schedule_week.tmpl
@@ -5,7 +5,7 @@
 <div class="container-fluid header-large current-next mobile-shrink">
   <div class="container">
       <div class="row justify-content-center">
-        <div class="col-11 col-md-10 box-shadow-1 mobile-hide">
+        <div class="col-11 col-md-10 box-shadow-1 current-next-container mobile-hide">
           {{template "current_and_next" .}}
         </div>
         <div class="col-11 col-md-10 text-center mobile-only">
