--- a/views/people.tmpl
+++ b/views/people.tmpl
@@ -25,7 +25,7 @@
     <div class="container-fluid current-next">
       <div class="container mobile-hide">
         <div class="row justify-content-center">
-          <div class="col-11 col-md-10">
+          <div class="col-11 col-md-10 box-shadow-1 current-next-container">
           {{template "current_and_next" .}}
           </div>
         </div>
