--- a/sass/main.scss
+++ b/sass/main.scss
@@ -61,6 +61,18 @@ footer {
   }
 }
 
+.drone-banner {
+  background: url("/images/drone-banner.jpg") center center no-repeat;
+  background-size: cover;
+  color: $white;
+  padding: 5em 0;
+  padding-bottom: 2.5em;
+
+  .slim {
+    padding: 6em 0 3em;
+  }
+}
+
 .display-1 {
   font-size: 4.5rem;
 }
