--- a/sass/base/_variables.scss
+++ b/sass/base/_variables.scss
@@ -29,7 +29,7 @@ $red: #d0011b;
 $black: #000000;
 
 $link-color-light: #4cbcff;
-$link-color-dark: #0069d1;
+$link-color-dark: #0062c4;
 
 //font
 $base-font-size: 16px;
