--- a/sass/main.scss
+++ b/sass/main.scss
@@ -39,10 +39,13 @@
 }
 
 // Custom page footer
-
 footer {
-  color: #777;
+  color: #646464;
   background: $off-white-color;
+
+  a {
+    color: $link-color-dark;
+  }
 
   .row {
     min-height: 3em;
