add drone shot and parrallax scrolling

--- a/views/teams.tmpl
+++ b/views/teams.tmpl
@@ -13,7 +13,7 @@
       </div>
     </div>
   </div>
-  <div class="container-fluid bg-primary">
+  <div class="container-fluid bg-off-white">
     <div class="container container-padded">
       <h1>Get Involved</h1>
       <p>
@@ -23,8 +23,9 @@
       </p>
     </div>
   </div>
-  <div class="container-fluid bg-primary">
+  <div class="container-fluid bg-off-white">
     <div class="container container-padded">
+      <h2>Teams</h2>
       <div class="row">
         {{range .Teams}}
           {{if .Alias}}
