--- a/sass/main.scss
+++ b/sass/main.scss
@@ -65,11 +65,11 @@ footer {
 }
 
 .drone-banner {
-  background: url("/images/drone-banner.jpg") center center no-repeat;
+  background: url("/images/drone-banner.jpg") top center no-repeat;
   background-size: cover;
   color: $white;
-  padding: 5em 0;
-  padding-bottom: 2.5em;
+  padding: 10em 0 2.5em 0;
+  background-position-y: 20px;
 
   .slim {
     padding: 6em 0 3em;
@@ -255,7 +255,9 @@ footer {
   }
 
   .drone-banner {
-    padding: 10em 0;
+    padding: 35vh 0 5em 0;
+    background-attachment: fixed;
+    background-size: cover;
   }
 
   .display-1 {
