Improve accessibility and little styling tweaks (#187)
* improve heading sizes

* Use correct headings

* improve team cards

* improve mobile banner padding

* Use correct headings

* Add additional page width size

* reverse bold card titles

* Add css for drone banner

- image will be added in next commit

* Improve contrast

* missing heading

* Set mobile font size to be smaller

* add drone shot and parrallax scrolling

* more heading corrections

* another heading fix

--- a/sass/base/_variables.scss
+++ b/sass/base/_variables.scss
@@ -21,7 +21,7 @@ $disabled-color: rgb(150, 150, 150);
 $primary-color: $ury-blue-color;
 $secondary-color: #002040;
 $third-color: #001933;
-$off-white-color: #e1e1e1;
+$off-white-color: #f3f3f3;
 
 $white: #ffffff;
 $blue: #0073e6;
@@ -29,7 +29,7 @@ $red: #d0011b;
 $black: #000000;
 
 $link-color-light: #4cbcff;
-$link-color-dark: #0069d1;
+$link-color-dark: #0062c4;
 
 //font
 $base-font-size: 16px;
