--- a/views/schedule_week.tmpl
+++ b/views/schedule_week.tmpl
@@ -5,12 +5,12 @@
 <div class="container-fluid header-large current-next mobile-shrink">
   <div class="container">
       <div class="row justify-content-center">
-        <div class="col-11 col-md-10 box-shadow-1 mobile-hide">
+        <div class="col-11 col-md-10 box-shadow-1 current-next-container mobile-hide">
           {{template "current_and_next" .}}
         </div>
         <div class="col-11 col-md-10 text-center mobile-only">
           <h1 class="display-3">Schedule</h1>
-          <h5 class="display-5">{{week (index .Schedule.Dates 0)}}</h5>
+          <h2 class="display-5">{{week (index .Schedule.Dates 0)}}</h2>
         </div>
       </div>
     </div>
@@ -22,7 +22,7 @@
     <div class="row">
       <div class="col-auto">
         <h1 class="display-4 mobile-hide">Schedule <a class="fa fa-key schedule-key-icon" href="#key"></a></h1>
-        <h5 class="text-muted mobile-hide">{{week (index .Schedule.Dates 0)}}</h5>
+        <h2 class="text-muted mobile-hide">{{week (index .Schedule.Dates 0)}}</h2>
       </div>
       <div class="col-12 mobile-only">
         <h1 class=" inline"><a class="fa fa-key schedule-key-icon" data-toggle="collapse" data-target=".schedule-keys" aria-expanded="false" aria-controls="schedule-keys"></a></h1>
@@ -110,7 +110,7 @@
     <div class="row justify-content-center pb-3">
         <div class="schedule-keys" id="key">
           <div class="key-row">
-            <h5 class="inline">Schedule Key:</h5>
+            <h2 class="inline">Schedule Key:</h2>
             <span class="schedule-block-regular">Regular</span>
             <span class="schedule-block-flagship">Flagship</span>
             <span class="schedule-block-event">Events</span>
