--- a/views/contact.tmpl
+++ b/views/contact.tmpl
@@ -64,36 +64,36 @@
     </div>
     <div class="row">
       <div class="col-md-6 col-lg-3">
-        <div class="card bg-transparent p-3">
+        <div class="card bg-white p-3">
           <div class="card-block">
-            <h5 class="card-title">Management</h5>
+            <h2 class="card-title">Management</h2>
             <p><a href="mailto:management@ury.org.uk" title="Email Management">management<br>@ury.org.uk</a></p>
             <p class="card-text">These are people who are responsible for the day to day running of the station and ensure the key aims of the station are met in terms of output, revenue and audience.</p>
           </div>
         </div>
       </div>
       <div class="col-md-6 col-lg-3">
-        <div class="card bg-transparent p-3">
+        <div class="card bg-white p-3">
           <div class="card-block">
-            <h5 class="card-title">Programme Controller</h5>
+            <h2 class="card-title">Programme Controller</h2>
             <p class="card-text"><a href="mailto:programme.controller@ury.org.uk" title="Email the Programme Controller">programme.controller<br>@ury.org.uk</a></p>
             <p class="card-text">The Programme Controller manages the quality of the station’s output and adhering to our licenses, please contact them if you have any enquiries on this.</p>
           </div>
         </div>
       </div>
       <div class="col-md-6 col-lg-3">
-        <div class="card bg-transparent p-3">
+        <div class="card bg-white p-3">
           <div class="card-block">
-            <h5 class="card-title">Music Team</h5>
+            <h2 class="card-title">Music Team</h2>
             <p class="card-text"><a href="mailto:music@ury.org.uk" title="Email the Music Team">music<br>@ury.org.uk</a></p>
             <p class="card-text">Are you a keen musician, want to hear a track on URY, or know an up and coming band that would like some air time? Give Music Team a shout!</p>
           </div>
         </div>
       </div>
       <div class="col-md-6 col-lg-3">
-        <div class="card bg-transparent p-3">
+        <div class="card bg-white p-3">
           <div class="card-block">
-            <h5 class="card-title">Production Team</h5>
+            <h2 class="card-title">Production Team</h2>
             <p class="card-text"><a href="mailto:production@ury.org.uk" title="Email the Production Team"> production<br>@ury.org.uk</a></p>
             <p class="card-text">Do you want URY to host or DJ an event? Or do you wish for your event to be broadcasted live? Production Team is the one who manage all of our events.</p>
           </div>
