--- a/views/people.tmpl
+++ b/views/people.tmpl
@@ -40,7 +40,7 @@
             </div>
             <div class="row">
               <div class="col text-center">
-                <h6>Shows: {{len .ShowCredits}}</h6>
+                <span class="h3">Shows: {{len .ShowCredits}}</span>
               </div>
             </div>
           </div>
