Singular default image and remove old images.

--- a/views/podcast.tmpl
+++ b/views/podcast.tmpl
@@ -29,7 +29,7 @@
           {{if .Podcast.Photo}}
             https://ury.org.uk{{.Podcast.Photo}}
           {{else}}
-            /images/podcast.png
+            /images/default_show_profile.png
           {{end}}
             " alt="{{.Podcast.Title}} Logo">
         </div>
