--- a/views/podcast_player.tmpl
+++ b/views/podcast_player.tmpl
@@ -11,7 +11,7 @@
       {{- if .Podcast.Photo -}}
             https://ury.org.uk{{.Podcast.Photo}}
       {{- else -}}
-            {{url "/images/podcast.png"}}
+            {{url "/images/default_show_profile.png"}}
       {{- end -}}
     " class="album-art"/>
     <div class="branding">
@@ -50,7 +50,7 @@
                 {{- if .Podcast.Photo -}}
                       https://ury.org.uk{{.Podcast.Photo}}
                 {{- else -}}
-                      {{url "/images/podcast.png"}}
+                      {{url "/images/default_show_profile.png"}}
                 {{- end -}}"
           },
       ]
