Added collaboration to schedule

--- a/sass/base/_variables.scss
+++ b/sass/base/_variables.scss
@@ -13,6 +13,8 @@ $music-purple: #562179;
 
 $flagship: #feb93a;
 
+$collab: #d14fda;
+
 $cin-primary: #00A69C;
 $cin-dark-primary: #1C857C;
 $cin-background: #333333;
