--- a/views/schedule_week.tmpl
+++ b/views/schedule_week.tmpl
@@ -34,6 +34,7 @@
             <span class="schedule-block-news">News</span>
             <span class="schedule-block-speech">Speech</span>
             <span class="schedule-block-music">Music</span>
+            <span class="schedule-block-collab">Collaboration</span>
           </div>
         </div>
       </div>
@@ -117,6 +118,7 @@
             <span class="schedule-block-news">News</span>
             <span class="schedule-block-speech">Speech</span>
             <span class="schedule-block-music">Music</span>
+            <span class="schedule-block-collab">Collaboration</span>
           </div>
         </div>
     </div>
