--- a/views/schedule_week.tmpl
+++ b/views/schedule_week.tmpl
@@ -29,7 +29,7 @@
         <div class="schedule-keys collapse">
           <div class="key-row">
             <span class="schedule-block-regular">Regular</span>
-            <span class="schedule-block-flagship">Flagship</span>
+            <span class="schedule-block-primetime">Primetime</span>
             <span class="schedule-block-event">Events</span>
             <span class="schedule-block-news">News</span>
             <span class="schedule-block-speech">Speech</span>
@@ -113,7 +113,7 @@
           <div class="key-row">
             <h2 class="inline">Schedule Key:</h2>
             <span class="schedule-block-regular">Regular</span>
-            <span class="schedule-block-flagship">Flagship</span>
+            <span class="schedule-block-primetime">Primetime</span>
             <span class="schedule-block-event">Events</span>
             <span class="schedule-block-news">News</span>
             <span class="schedule-block-speech">Speech</span>
