--- a/views/index.tmpl
+++ b/views/index.tmpl
@@ -44,18 +44,18 @@
   {{if .PageContext.CIN}}
   <div id="index-videos" class="container-fluid container-padded pb-0 bg-cin">
     <h2 class="cin-text">URY Candidate Interview Night</h2>
-    <div id="cin-videos" class="row scroll-horiz pb-3 custom-scrollbar youtube-video-slider">
+    <div id="cin-videos" class="row scroll-horiz pb-3 custom-scrollbar-cin youtube-video-slider">
     </div>
   </div>
   {{end}}
   {{with .PageData}}
-  <div id="index-videos" class="container-fluid container-padded pb-0 bg-primary">
+  <div id="index-videos" class="container-fluid container-padded pb-0 bg-sessions">
     <h2>URY Sessions</h2>
-    <div id="sessions-videos" class="row scroll-horiz pb-3 custom-scrollbar youtube-video-slider">
+    <div id="sessions-videos" class="row scroll-horiz pb-3 custom-scrollbar-music youtube-video-slider">
     </div>
   </div>
   {{if .Podcasts}}
-  <div id="index-podcasts" class="container-fluid container-padded pb-0 bg-secondary">
+  <div id="index-podcasts" class="container-fluid container-padded pb-0 bg-podcasts">
     <div class="row">
       <div class="col-12">
         <h2>Latest Podcasts</h2>
