--- a/views/on_demand.tmpl
+++ b/views/on_demand.tmpl
@@ -52,17 +52,17 @@
     </div>
   </div>
 </div>
-<div id="index-videos" class="container-fluid container-padded bg-secondary">
+<div id="index-videos" class="container-fluid container-padded bg-sessions">
   <div class="row">
     <div class="col-12 col-md-8">
-      <a name="YouTube"></a><h2>{{.PageContext.ShortName}} on Youtube</h2>
+      <a name="YouTube"></a><h2>URY Sessions</h2>
     </div>
   </div>
   <div id="sessions-videos" class="row pb-3 youtube-grid">
   </div>
 </div>
 {{if .PageData.LatestPodcasts}}
-<div id="index-podcasts" class="container-fluid container-padded pb-0 bg-third">
+<div id="index-podcasts" class="container-fluid container-padded pb-0 bg-podcasts">
   <h2>Latest Podcasts</h2>
   <div class="row custom-scrollbar scroll-horiz">
     {{range .PageData.LatestPodcasts}}
