--- a/views/index.tmpl
+++ b/views/index.tmpl
@@ -63,7 +63,7 @@
     </div>
     <div class="row scroll-horiz pb-3 custom-scrollbar">
       {{range .Podcasts}}
-      <div class="col-8 col-sm-7 col-md-4 col-lg-3 col-xl-2 pb-3">
+      <div class="col-8 col-sm-7 col-md-4 col-lg-3 col-xl-2 p-3">
         <a class="ury-card podcast" href="{{.MicrositeLink.URL}}">
           <div class="ury-card-img" style="background: url('https://ury.org.uk{{.Photo}}');" title="URY Podcast: {{.Title}} Logo"></div>
           <div class="ury-card-body">
