Sorted banner padding

--- a/views/on_demand.tmpl
+++ b/views/on_demand.tmpl
@@ -13,8 +13,8 @@
 {{end}}
 
 {{define "content"}}
-<div class="container-fluid on-demand">
-  <div class="container container-padded">
+<div class="container-fluid header-medium on-demand position-relative">
+  <div class="container">
     <div class="row align-items-center text-center">
       <div class="col">
         <h1 class="display-3">{{.PageContext.ShortName}} {{.PageContext.ODName}}</h1>
