Improved message box spacings

--- a/views/elements/message_box.tmpl
+++ b/views/elements/message_box.tmpl
@@ -17,6 +17,6 @@
   {{end}} 
   >Send Message</button>
 </form>
-<p class="pt-1">You can also text on <a href="sms:+447851101313">07851 101 313</a></p>
+<p class="pt-1 mb-0">You can also text on <a href="sms:+447851101313">07851 101 313</a></p>
 {{end}}
 {{end}}
