--- a/views/index.tmpl
+++ b/views/index.tmpl
@@ -14,9 +14,9 @@
     </div>
   </div>
   <div id="index-infobar" class="container-fluid bg-off-white container-padded">
-    <div class="container container-padded">
+    <div class="container">
       <div class="row justify-content-center">
-        <div class="pb-4 col-lg-3">
+        <div class="col-lg-3">
         {{template "message_box" .}}
         </div>
         <div class="col-lg-9">
