Fixed index podcast spacing

--- a/views/index.tmpl
+++ b/views/index.tmpl
@@ -61,7 +61,7 @@
         <h2>Latest Podcasts</h2>
       </div>
     </div>
-    <div class="row scroll-horiz pb-3 custom-scrollbar">
+    <div class="row scroll-horiz custom-scrollbar">
       {{range .Podcasts}}
       <div class="col-8 col-sm-7 col-md-4 col-lg-3 col-xl-2 p-3">
         <a class="ury-card podcast" href="{{.MicrositeLink.URL}}">
